<resources>
    <string name="app_name">MusicApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="responds">הגיבו</string>
    <string name="listen">הקשיבו</string>
    <string name="share">שיתפו</string>
    <string name="list">רשימה</string>
    <string name="map">מפה</string>
    <string name="description_library">ספריית הסיפורים \nשלך עדיין ריקה</string>
    <string name="description_highlight">זה הזמן להתחיל</string>
    <string name="upload_story_title">ברכות</string>
    <string name="upload_story_lbl_1">הסיפור שלך הוקלט בהצלחה.</string>
    <string name="upload_story_lbl_2">רוצה לתת לסיפור שם?</string>
    <string name="upload_story_lbl_3">רוצה להוסיף תמונה?</string>
    <string name="take_picture">צילום תמונה</string>
    <string name="gallery_picture">תמונה מהגלריה</string>
    <string name="continue_btn">המשך</string>
    <string name="register_dialog_text">כדי שתוכל/י לפרסם ולנעוץ סיפור ע״ג מפה עליך להירשם לאפליקציית MY Record</string>
    <string name="register">להרשמה</string>
    <string name="lbl_locate_dialog_text">מי יוכל לשמוע את הסיפור שלך?</string>
    <string name="only_me">רק אני</string>
    <string name="everyone">כולם</string>
    <string name="delete">מחיקה</string>
    <string name="change_location">שינוי מיקום</string>
    <string name="change_title">שינוי שם/כותרת</string>
    <string name="my_story_btn_text">מקמו את הסיפור שלי</string>
    <string name="using_facebook">באמצעות פייסבוק</string>
    <string name="or">או</string>
    <string name="type_number">הקלד/י מס׳ טלפון</string>
    <string name="enter">כניסה</string>
    <string name="search_for_stories">חיפוש סיפורים</string>
    <string name="register_using_facebook">הרשמה באמצעות פייסבוק</string>
    <string name="please_fill_the_following_details">נא למלא את הפרטים הבאים</string>
    <string name="hint_private_name">שם פרטי</string>
    <string name="hint_last_name">שם משפחה</string>
    <string name="phone_number">מס׳ טלפון</string>
    <string name="email">דוא״ל</string>
    <string name="registration_sub_title_text">יש לך שתי אפשרויות:</string>
    <string name="read_and_approve">קראתי ואני מאשר/ת</string>
    <string name="myrecord_terms">תקנון של MyRecord</string>
    <string name="create_new_account">יצירת חשבון חדש</string>
    <string name="skip">דלג/י בשלב זה</string>
    <string name="verify_number">אימות טלפון נייד</string>
    <string name="phone_verification_text">ברגעים אלו נשלח לך קוד אימות לנייד שמסתיים ב - 888, נא להזין אותו כעת.</string>
    <string name="insert_code">הזן/י קוד שקיבלת</string>
    <string name="verify">אמת נייד</string>
    <string name="didnt_got_the_code">לא קיבלתי קוד, שלחו לי שוב</string>
    <string name="cancel">ביטול</string>
    <string name="save_recording_btn">שמירה ומיקום</string>
    <string name="recording_dialog_title_text">האם את/ה רוצה לבטל את ההקלטה?</string>
    <string name="recording_dialog_text">לאחר ביטול, ההקלטה תמחק לאלתר.</string>
    <string name="save">שמירה</string>
    <string name="my_stories_library">ספריית הסיפורים שלי</string>
    <string name="has_account">יש לי חשבון</string>
    <string name="recording_save_dialog_title_text">האם את/ה רוצה לשמור את הסיפור?</string>
    <string name="shears">שתף/י</string>
    <string name="reacted">הגיב/י</string>
    <string name="welcome">ברוכים הבאים</string>
    <string name="myrecord">MyRecord</string>
    <string name="skips">דלג/י</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>

