<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center_horizontal|top"
    android:layoutDirection="ltr"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/verification_layout_top_image_margin_top"
        app:srcCompat="@drawable/textsms_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/verify_number"
        android:textColor="@color/black"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/lbl_verify_number_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/rubik_regular"
        android:gravity="center"
        android:text="@string/phone_verification_text"
        android:textColor="@color/black"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/txt_phone_code"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_register_bg"
        android:fontFamily="@font/rubik_regular"
        android:gravity="right|center_vertical"
        android:hint="@string/insert_code"
        android:inputType="number"
        android:lines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#4A4B4B"
        android:textColorHint="#4A4B4B"
        android:textSize="14dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_verify_number"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/btn_white_bg"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:id="@+id/btn_verify_number_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/create_account_btn_normal"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">


            <TextView
                android:id="@+id/lbl_dummy5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/rubik_meduim"
                android:gravity="center"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="22dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/btn_didnt_got_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/verification_layout_btn_didnt_got_code_top_margin"
        android:background="@drawable/btn_white_bg"
        android:fontFamily="@font/rubik_meduim"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/didnt_got_the_code"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:visibility="visible" />


</LinearLayout>