<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/upload_story_image_top_margin"
        android:src="@drawable/congrats_emoji" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/upload_story_title_top_margin"
        android:fontFamily="@font/rubik_bold"
        android:gravity="center"
        android:text="@string/upload_story_title"
        android:textColor="#0E131E"
        android:textSize="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/rubik_regular"
        android:gravity="center"
        android:lines="1"
        android:text="@string/upload_story_lbl_1"
        android:textColor="#0E131E"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/rubik_bold"
        android:gravity="center"
        android:text="@string/upload_story_lbl_2"
        android:textColor="#0E131E"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/txt_upload_record_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/underline_gray_layerlist"
        android:fontFamily="@font/rubik_meduim"
        android:lines="1"
        android:padding="10dp"
        android:textColor="#4A4B4B"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/upload_story_text_top_margin"
        android:fontFamily="@font/rubik_bold"
        android:gravity="center"
        android:text="@string/upload_story_lbl_3"
        android:textColor="#0E131E"
        android:textSize="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_take_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/upload_story_buttons_side_margin"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="@dimen/upload_story_buttons_side_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/btn_white_bg"
        app:cardBackgroundColor="#FFD2D2"
        app:cardCornerRadius="15dp"
        app:cardElevation="7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:src="@drawable/camera_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center"
                android:text="@string/take_picture"
                android:textColor="#0E131E"
                android:textSize="17dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_upload_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/upload_story_buttons_side_margin"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="@dimen/upload_story_buttons_side_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/btn_white_bg"
        app:cardBackgroundColor="#F9FAFC"
        app:cardCornerRadius="15dp"
        app:cardElevation="7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:src="@drawable/galery_icon" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center"
                android:text="@string/gallery_picture"
                android:textColor="#0E131E"
                android:textSize="17dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/upload_story_btn_continue_margin_top"
        android:background="@drawable/btn_white_bg"
        android:fontFamily="@font/rubik_meduim"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/continue_btn"
        android:textColor="#0E131E"
        android:textSize="14dp" />


</LinearLayout>