<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:layoutDirection="ltr">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/create_account_top_image_top_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo_registration" />

    <TextView
        android:id="@+id/lbl_dummy1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/registration_sub_title_text"
        android:textColor="#0E131E"
        android:textSize="14dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_facebook_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_facebook_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/btn_white_bg"
        android:visibility="gone"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dummy1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/dummy_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_toEndOf="@+id/lbl_dummy2"
                android:src="@drawable/facebook" />


            <TextView
                android:id="@+id/lbl_dummy2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/rubik_meduim"
                android:gravity="center"
                android:text="@string/register_using_facebook"
                android:textColor="#0E131E"
                android:textSize="16dp" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/lbl_dummy3_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/create_acount_middle_line_top_margin"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_facebook_register">

        <TextView
            android:id="@+id/lbl_dummy3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/or"
            android:textColor="#4A4B4B"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:layout_toStartOf="@+id/lbl_dummy3"
            android:background="#DBD8D8" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@+id/lbl_dummy3"
            android:background="#DBD8D8" />

    </RelativeLayout>

    <TextView
        android:id="@+id/lbl_dummy4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/please_fill_the_following_details"
        android:textColor="#0E131E"
        android:textSize="14dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dummy3_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/lbl_dummy4">

        <EditText
            android:id="@+id/lbl_register_private_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/edittext_register_bg"
            android:drawableStart="@drawable/asterisk"
            android:fontFamily="@font/rubik_regular"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_private_name"
            android:inputType="text"
            android:lines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#4A4B4B"
            android:textColorHint="#4A4B4B"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/lbl_register_last_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_register_bg"
            android:drawableStart="@drawable/asterisk"
            android:fontFamily="@font/rubik_regular"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_last_name"
            android:inputType="text"
            android:lines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#4A4B4B"
            android:textColorHint="#4A4B4B"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/lbl_register_phone_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_register_bg"
            android:drawableStart="@drawable/asterisk"
            android:fontFamily="@font/rubik_regular"
            android:gravity="right|center_vertical"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:lines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#4A4B4B"
            android:textColorHint="#4A4B4B"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/lbl_register_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_register_bg"
            android:fontFamily="@font/rubik_regular"
            android:gravity="right|center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#4A4B4B"
            android:textColorHint="#4A4B4B"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_terms"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="6dp"
                android:background="@drawable/underline_layerlist"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center_vertical"
                android:text="@string/myrecord_terms"
                android:textColor="@color/link_text_color"
                android:textSize="14dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center_vertical"
                android:text="@string/read_and_approve"
                android:textColor="#4A4B4B"
                android:textSize="14dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:buttonTint="#4A4B4B"
                android:padding="3dp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/create_account_btn_height"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/btn_white_bg"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/create_account_btn_normal"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/lbl_dummy5"
                    android:src="@drawable/person_placeholder" />


                <TextView
                    android:id="@+id/lbl_dummy5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/rubik_meduim"
                    android:gravity="center"
                    android:text="@string/create_new_account"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/create_account_btn_skip_margin_top"
            android:background="@drawable/btn_white_bg"
            android:fontFamily="@font/rubik_meduim"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/skip"
            android:textColor="#0E131E"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_has_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/underline_layerlist"
            android:backgroundTint="#0E131E"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/has_account"
            android:textColor="#0E131E"
            android:textSize="16dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>