<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:elevation="30dp"
    android:background="#6A000000">

    <androidx.cardview.widget.CardView
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:src="@drawable/trash_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/rubik_bold"
                android:gravity="center"
                android:text="@string/recording_dialog_title_text"
                android:textColor="#0E131E"
                android:textSize="17dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/rubik_regular"
                android:gravity="end|top"
                android:text="@string/recording_dialog_text"
                android:textColor="#0E131E"
                android:textSize="15dp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_delete_recording"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="22dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="@drawable/btn_white_bg"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lbl_dummy4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/rubik_bold"
                            android:gravity="center"
                            android:paddingStart="20dp"
                            android:paddingTop="7dp"
                            android:paddingEnd="20dp"
                            android:paddingBottom="7dp"
                            android:text="@string/delete"
                            android:textColor="#FF4545"
                            android:textSize="17dp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_save_recording"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="38dp"
                    android:layout_marginBottom="22dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="@drawable/btn_white_bg"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lbl_dummy5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/rubik_meduim"
                            android:gravity="center"
                            android:paddingStart="20dp"
                            android:paddingTop="7dp"
                            android:paddingEnd="20dp"
                            android:paddingBottom="7dp"
                            android:text="@string/save"
                            android:textColor="#3B3B3B"
                            android:textSize="17dp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>


            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</FrameLayout>